###############################################################################
#                                  VARIABLES                                  #
###############################################################################
set(ENVKIT_STANDALONE main.cpp)

###############################################################################
#                                    TARGET                                   #
###############################################################################
add_executable(standalone ${ENVKIT_STANDALONE})
target_link_libraries(standalone envkit)
